feat: added adapters
